NEWS: newspaper-column panel: add CSS hack to fix column flow on Safari

--- a/themes/news/less/_panel-newspaper-columns.less
+++ b/themes/news/less/_panel-newspaper-columns.less
@@ -5,6 +5,8 @@
 @column-gap-lg: 1.5em;
 
 .newspaper-columns-content {
+  min-height: 0;
+
   & > p,
   & > div {
     -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
